--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
-$whitesmoke: #f5f5f5;
 .App {
   text-align: center;
-  background: url("../public/img/svg/blurry-gradient-haikei.svg") center center
-    no-repeat blueviolet;
+  background: url("../public/img/svg/blurry-gradient-haikei.svg") center center no-repeat blueviolet;
   background-size: cover;
 }
 
@@ -13,9 +11,9 @@ $whitesmoke: #f5f5f5;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: $whitesmoke;
+  color: #f5f5f5;
 }
 
 .App-link {
   color: #61dafb;
-}
+}/*# sourceMappingURL=App.css.map */
