--- a/src/App/App.css
+++ b/src/App/App.css
@@ -19,4 +19,6 @@
 }
 .buttonRow .wrapper:first-child {
   margin-right: 50px;
-}/*# sourceMappingURL=App.css.map */
+  
+}
+/*# sourceMappingURL=App.css.map */
